iss#225 Service, RestAPI: method to add MediaFiles as list of file names for an artifact: insert media files initial implementation and tests