@@ -14,16 +14,15 @@ import com.romanpulov.odeonwss.service.processor.ProcessorException;
 import com.romanpulov.odeonwss.service.processor.parser.MediaParser;
 import com.romanpulov.odeonwss.service.processor.parser.NamesParser;
 import com.romanpulov.odeonwss.utils.media.MediaFileInfoException;
+import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Service
 public class MediaFileService
@@ -117,18 +116,52 @@ public class MediaFileService
                 () -> new CommonEntityNotFoundException("Artifact", artifactId)
         );
 
-        Path rootPath = Paths.get(artifactTypeService.getArtifactTypePath(artifact.getArtifactTypeId()));
-        Path filePath = Path.of(rootPath.toAbsolutePath().toString(), artifact.getTitle(), mediaFileName);
+        return mediaFileMapper.toDTO(getMediaFileAttributesByArtifact(
+                artifact.getArtifactTypeId(), artifact.getTitle(), mediaFileName));
+    }
+
+    private MediaFile getMediaFileAttributesByArtifact(long artifactTypeId, String artifactTitle, String mediaFileName)
+            throws WrongParameterValueException {
+        Path rootPath = Paths.get(artifactTypeService.getArtifactTypePath(artifactTypeId));
+        Path filePath = Path.of(rootPath.toAbsolutePath().toString(), artifactTitle, mediaFileName);
         if (Files.exists(filePath)) {
             try {
-                MediaFile mediaFile = mediaFileMapper.fromMediaFileInfo(mediaParser.parseTrack(filePath));
-                return mediaFileMapper.toDTO(mediaFile);
-
+                return mediaFileMapper.fromMediaFileInfo(mediaParser.parseTrack(filePath));
             } catch (MediaFileInfoException e)  {
                 throw new WrongParameterValueException("MediaFileName: parsing error", e.getMessage());
             }
         } else {
             throw new WrongParameterValueException("MediaFileName", mediaFileName);
         }
+    }
+
+    @Transactional
+    public RowsAffectedDTO insertMediaFiles(Long artifactId, List<String> mediaFileNames)
+            throws CommonEntityNotFoundException, WrongParameterValueException {
+        Artifact artifact = artifactRepository.findById(artifactId).orElseThrow(
+                () -> new CommonEntityNotFoundException("Artifact", artifactId)
+        );
+
+        Set<String> existingMediaFiles = getTableIdNameDuration(artifactId)
+                .stream()
+                .map(MediaFileDTO::getName)
+                .collect(Collectors.toUnmodifiableSet());
+
+        List<MediaFile> newMediaFiles = new ArrayList<>();
+
+        for (String mediaFileName: mediaFileNames) {
+            if (existingMediaFiles.contains(mediaFileName)) {
+                throw new WrongParameterValueException("mediaFileNames",
+                        "MediaFile " + mediaFileName + " already exists");
+            } else {
+                MediaFile mediaFile = this.getMediaFileAttributesByArtifact(
+                        artifact.getArtifactType().getId(), artifact.getTitle(), mediaFileName);
+                mediaFile.setArtifact(artifact);
+                newMediaFiles.add(mediaFile);
+            }
+        }
+
+        long savedCount = StreamSupport.stream(repository.saveAll(newMediaFiles).spliterator(), false).count();
+        return RowsAffectedDTO.from(savedCount);
     }
 }
